--- a/my-app-new/package.json
+++ b/my-app-new/package.json
@@ -2,7 +2,7 @@
   "name": "my-app-new",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://SeanD768.github.io/my-app-new",
+  "homepage": "http://SeanD768.github.io/test.github.io",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
