--- a/my-app-new/package.json
+++ b/my-app-new/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "focus-trap": "^2.4.3",
+    "lodash.isequal": "^4.5.0",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.4",
